--- a/project_1/index.html
+++ b/project_1/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/project_1/style.css">
-    <title></title>
+    <title>Wyszukiwarka</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="header">
+            <div class="shadow"></div>
+            <h1>Drink Search</h1>
+            <input type="text" class="search" placeholder="Wpisz nazwę szukanego napoju">
+        </div>
+        <div class="drink_list">
+            <h2>Lista dostępnych napojów</h2>
+            <ul>
+                <li>Mleko</li>
+                <li>Piwo</li>
+                <li>Whisky</li>
+                <li>Pepsi</li>
+                <li>Woda gazowana</li>
+                <li>Sok jabłkowy</li>
+                <li>Sok pomarańczowy</li>
+                <li>Sok bananowy</li>
+                <li>Sok wieloowocowy</li>
+                <li>Wino czerwone</li>
+                <li>Wino białe</li>
+                <li>Woda niegazowana</li>
+                <li>Energy drink</li>
+            </ul>
+        </div>
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
