--- a/javascript_essentials/2_toggle_multiple_visibility_password_fields/main.html
+++ b/javascript_essentials/2_toggle_multiple_visibility_password_fields/main.html
@@ -41,14 +41,13 @@
             background-color: #45a049;
         }
 
-        .container,
-        {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .form_container {
